--- a/css/style.css
+++ b/css/style.css
@@ -9188,6 +9188,10 @@ textarea.form-control {
   padding: 6em 0;
   position: relative; }
 
+.recipe-item {
+  padding: 2em 0;
+  position: relative; }
+
 .ftco-no-pt {
   padding-top: 0 !important; }
 
